# rust.os

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  linker.ld  x86_64-rust_os.json
.cargo/: config
arch/x86_64/src/: boot.asm  long_mode_init.asm
src/: lib.rs  main.rs  multiboot_header.asm  serial.rs  vga_buffer.rs
src/x86_64/: boot.asm  grub.cfg  long_mode_init.asm
tests/: basic_boot.rs  should_panic.rs
