[package]
name = "rust_os"
version = "0.0.1"
authors = ["Remo Zumsteg <remolueoend@users.noreply.github.com>"]
edition = "2018"

[dependencies]
bootloader = "0.6.0"
volatile = "0.2.3"
spin = "0.4.9"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

# the profile used for `cargo build`
[profile.dev]
# panic = "abort" # disable stack unwinding on panic

# the profile used for `cargo build --releases`
[profile.release]
# panic = "abort" # disable stack unwinding on panic